--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "operations",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "server": "node server/index.js",
-    "dev:all": "concurrently \"npm run dev\" \"npm run server\"",
+    "dev": "concurrently \"vite\" \"node server/index.js\"",
+    "start": "node server/index.js",
     "build": "vite build",
     "preview": "vite preview"
   },
