--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "googleapis": "^170.0.0",
+    "lowdb": "^7.0.1",
     "openai": "^4.104.0"
   }
 }
