UI: Update favicon

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^170.0.0",
     "lowdb": "^7.0.1",
     "openai": "^4.104.0",
+    "pdf-img-convert": "^2.0.0",
     "pg": "^8.16.3"
   }
 }
