--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: invoice-automation
     env: node
     plan: starter
-    buildCommand: npm install && npm run build
+    buildCommand: rm -rf node_modules && npm install && npm run build
     startCommand: npm start
     envVars:
       - key: PORT
